[package]
name = "pallet-fastlane"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }         
codec = { workspace = true }
scale-info = { workspace = true }
sp-core        = { workspace = true }
sp-runtime     = { workspace = true }
log            = { version = "0.4", default-features = false }


[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-io/std",                      
    "codec/std",
    "scale-info/std",
     "sp-core/std",
    "sp-runtime/std",
    "frame-system/std",
]